# aspire

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  Aspire-Core.slnf  Aspire.slnx  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  NuGet.config  Plan.md  README.md  aspire-update-json-validation-plan-gaps.md  aspire-update-json-validation-plan.md  build-output.txt  build-output2.txt  build-output3.txt  build-output4.txt  build-output5.txt  dogfood.sh  flake.nix  global.json  localhive.ps1  localhive.sh
.claude/: settings.local.json
.config/: dotnet-tools.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  zizmor.yml
.impeccable/: hook.cache.json
13.3/: all-prs.json  feedback-issue.json
13.4/: feedback-issue.json
13.5/: feedback-issue.json
causes/: acquisition-mockghapi-textfilebusy.json  cli-apphostlauncher-cleanuponcancel-flaky.json  cli-apphostlauncher-reportsforkexitcode-flaky.json  cli-orphandetection-apply-nullstarttime-stampspidonly.json  docker-compose-port-already-in-use.json  dotnet-install-503-service-unavailable.json  dotnet-install-ssl-auth-failure.json  github-actions-service-unavailable.json  hosting-parentprocess-dcp-timestamp-badrequest.json  hosting-parentprocess-reuse-dcp-timestamp-badrequest.json  hosting-testing-crashtests-after-build.json  mauibuildqueue-releasesemaphoreafterlaunchasync.json  npm-registry-rate-limit.json  nuget-org-invalid-response.json  processguest-blockingsignaler-timeout.json  processguest-launchasync-expireescalatestotreekill.json  processguest-signalerThrows-treekill-timeout.json  rabbitmq-logging-testexceptionwithoutinnerexception.json  remotehost-jsonrpc-auth-timeout.json  runcmd-detachedchild-awaitsapphostteardown-timeout.json  servicebus-azureeventsource-collection-modified.json  windows-process-init-failure-0xc0000142.json
docs/: PROXY-PATHBASE-DEPLOYMENT.md  aspire-hosting-blazor.md  cli-staging-validation.md  conditional-tests-run.md  contributing.md  deno-flag-surface.md  dogfooding-pull-requests.md  extension-signing.md  homebrew-core-formula.md  list-of-diagnostics.md  machine-requirements.md  pr-description.md  release-process.md  roadmap.md
eng/: AfterSigning.targets  AfterSolutionBuild.targets  Build.props  Bundle.proj  Publishing.props  Signing.props  SpecializedTestRunsheetBuilderBase.targets  Testing.props  Testing.targets  Version.Details.xml  Versions.props  build.ps1  build.sh  generate-catalog.ps1  refreshTypeScriptSdks.ps1  test-retry-patterns.json  test-trigger-map.yml
extension/: .vscode-test.mjs  .vscodeignore  .yarnrc.yml  CHANGELOG.md  CONTRIBUTING.MD  CONTRIBUTING.md  Extension.proj  README.md  build.ps1  build.sh  gulpfile.js  package-lock.json  package.json  package.nls.json  telemetry.json
playground/: Directory.Build.props
playground/AspireAgents/acp-agent-python/: pyproject.toml
playground/AspireAgents/acp-agent-python/acp_agent/: __init__.py  main.py
playground/AspireAgents/agui-acp-agent-python/: pyproject.toml
playground/AspireAgents/agui-acp-agent-python/agui_acp_agent/: __init__.py  main.py
playground/AspireAgents/weather-agent-python/: pyproject.toml
playground/AspireAgents/weather-agent-python/weather_agent_python/: __init__.py  main.py
playground/CppHello/cpp-api/: CMakeLists.txt  main.cpp  vcpkg.json
runs/: 28425753079.json  28843804933.json  28898685840.json  28906422279.json  28948977829.json  28989215965.json  29060081150.json  29060131780.json  29122927133.json  29217376246.json  29220139824.json  29253519053.json  29371663504.json  29441229739.json  29456677302.json  29602181228.json  29612218857.json  29622211818.json  29782869840.json  29787895542.json  29828970048.json  29880737952.json  29884310827.json  30055044537.json
scripts/: publish-dashboard.ps1
src/: Directory.Build.props  Directory.Build.targets  Dockerfile
src/Aspire.Deck/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src/Aspire.Deck/src-tauri/capabilities/: default.json
src/Aspire.Deck/src-tauri/icons/: icon.icns
src/Aspire.Deck/src-tauri/src/: canvas.rs  commands.rs  config.rs  control.rs  interaction.rs  lib.rs  main.rs  model.rs  proto.rs  resource_client.rs  state.rs
src/Aspire.Deck/src-tauri/src/otlp/: metrics.rs  mod.rs
tests/: Directory.Build.props  (+3 more)
(+8439 files in other folders)
