[project]
name = "aspire-agents-acp"
version = "0.1.0"
description = "ACP agent playground for Aspire"
requires-python = ">=3.13"
dependencies = [
    "acp-sdk",
    "agent-framework-foundry",
    "aiohttp",
    "azure-identity>=1.25.0",
    "uvicorn<0.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["acp_agent"]

[tool.uv]
prerelease = "allow"
