[project]
name = "aspire-agents-agui-acp"
version = "0.1.0"
description = "AG-UI and ACP agent playground for Aspire"
requires-python = ">=3.13"
dependencies = [
    "acp-sdk",
    "agent-framework-ag-ui",
    "agent-framework-foundry",
    "aiohttp",
    "azure-identity>=1.25.0",
    "fastapi>=0.119.0",
    "httpx==0.28.1",
    "uvicorn<0.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agui_acp_agent"]

[tool.uv]
prerelease = "allow"
