[project]
name = "aspire-agents-weather-a2a"
version = "0.1.0"
description = "A2A weather agent playground for Aspire"
requires-python = ">=3.13"
dependencies = [
    "agent-framework",
    "agent-framework-a2a",
    "agent-framework-azure",
    "azure-identity>=1.25.0",
    "fastapi>=0.119.0",
    "opentelemetry-distro>=0.59b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "uvicorn>=0.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["weather_agent_python"]

[tool.uv]
prerelease = "allow"
