[project]
name = "aspire-agents-a2a-jsonrpc"
version = "0.1.0"
description = "A2A JSON-RPC agent playground for Aspire"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[fastapi]>=1.1.0",
    "opentelemetry-distro>=0.59b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "uvicorn>=0.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["weather_agent_python"]

[tool.uv]
prerelease = "allow"
